支持日期转字符串

--- a/doc/语法.md
+++ b/doc/语法.md
@@ -18,3 +18,29 @@ SELECT name, age FROM test ORDER BY age DESC;
 SELECT name, age FROM test ORDER BY age DESC LIMIT 1;
 ```
 
+### WHERE
+
+```sql
+SELECT name, age FROM test ORDER BY age DESC LIMIT 1;
+```
+
+
+
+## 函数
+
+### dateToString
+
+同 [$dateToString](https://docs.mongodb.com/manual/reference/operator/aggregation/dateToString/#exp._S_dateToString)
+
+```sql
+dateToString(date, format, timeZone, onNull)
+```
+
+示例
+
+```sql
+SELECT *,dateToString(date, '%Y') AS year FROM test;
+SELECT * FROM test WHERE dateToString(date, "%Y") = '2020';
+SELECT *,dateToString(date, '%Y', '+08', '1999') AS year FROM test;
+```
+
