--- a/doc/语法.md
+++ b/doc/语法.md
@@ -44,3 +44,17 @@ SELECT * FROM test WHERE dateToString(date, "%Y") = '2020';
 SELECT *,dateToString(date, '%Y', '+08', '1999') AS year FROM test;
 ```
 
+### dateFromString
+
+同[$dateFromString](https://docs.mongodb.com/manual/reference/operator/aggregation/dateFromString/)
+
+```sql
+dateFromString(dateString, format, timeZone, onError, onNull)
+```
+
+示例
+
+```sql
+SELECT * ,dateFromString('2020-12-13', '%Y-%m-%d', '+08') AS registerAt FROM person
+```
+
