[A]支持+-*/四则运算
支持表达式参与比较
SELECT语法支持表达式

--- a/doc/语法.md
+++ b/doc/语法.md
@@ -24,6 +24,23 @@ SELECT name, age FROM test ORDER BY age DESC LIMIT 1;
 SELECT name, age FROM test ORDER BY age DESC LIMIT 1;
 ```
 
+#### IN
+
+```sql
+SELECT * FROM person WHERE title IN ('BOSS', 'ENGINEER');
+```
+
+
+
+## 表达式
+
+支持：+、-、*、/
+
+```sql
+SELECT *, salary * (1 + bonusRate/100.0) AS income FROM person
+SELECT * FROM person WHERE salary * (1 + bonusRate/100.0) = 16500
+```
+
 
 
 ## 函数
