[A]增加GROUP BY语法与SUM聚合表达式

--- a/doc/语法.md
+++ b/doc/语法.md
@@ -24,6 +24,12 @@ SELECT name, age FROM test ORDER BY age DESC LIMIT 1;
 SELECT name, age FROM test ORDER BY age DESC LIMIT 1;
 ```
 
+### GROUP BY
+
+```sql
+SELECT title, SUM(salary) AS total from person WHERE salary > 0 GROUP BY title ORDER BY total
+```
+
 #### IN
 
 ```sql
