[A]支持分组后取MAX、MIN、AVG

--- a/doc/语法.md
+++ b/doc/语法.md
@@ -26,8 +26,11 @@ SELECT name, age FROM test ORDER BY age DESC LIMIT 1;
 
 ### GROUP BY
 
+支持SUM、AVG、MAX、MIN
+
 ```sql
-SELECT title, SUM(salary) AS total from person WHERE salary > 0 GROUP BY title ORDER BY total
+SELECT title, SUM(salary) AS total from person WHERE salary > 0 GROUP BY title ORDER BY total;
+SELECT title, MAX(salary) AS 'max', MIN(salary) as 'min' ,AVG(salary) as 'avg' from person WHERE salary > 0 GROUP BY title ORDER BY 'max'
 ```
 
 #### IN
