[A]支持分组后first、last计算

--- a/doc/语法.md
+++ b/doc/语法.md
@@ -26,11 +26,13 @@ SELECT name, age FROM test ORDER BY age DESC LIMIT 1;
 
 ### GROUP BY
 
-支持SUM、AVG、MAX、MIN
+支持SUM、AVG、MAX、MIN、FIRST、LAST
 
 ```sql
 SELECT title, SUM(salary) AS total from person WHERE salary > 0 GROUP BY title ORDER BY total;
-SELECT title, MAX(salary) AS 'max', MIN(salary) as 'min' ,AVG(salary) as 'avg' from person WHERE salary > 0 GROUP BY title ORDER BY 'max'
+SELECT title, MAX(salary) AS 'max', MIN(salary) as 'min' ,AVG(salary) as 'avg' from person WHERE salary > 0 GROUP BY title ORDER BY 'max';
+SELECT first(firstName) AS name, first(bornDate) as born FROM person GROUP BY title ORDER BY bornDate ASC;
+SELECT last(firstName) AS name, last(bornDate) as born FROM person GROUP BY title ORDER BY bornDate ASC;
 ```
 
 #### IN
