--- a/doc/语法.md
+++ b/doc/语法.md
@@ -26,13 +26,16 @@ SELECT name, age FROM test ORDER BY age DESC LIMIT 1;
 
 ### GROUP BY
 
-支持SUM、AVG、MAX、MIN、FIRST、LAST
+支持的聚合函数,参考：[文档](https://docs.mongodb.com/manual/reference/operator/aggregation/group/)
+
+支持sum、avg、max、min、first、last、StdDevPop、StdDevSamp
 
 ```sql
 SELECT title, SUM(salary) AS total from person WHERE salary > 0 GROUP BY title ORDER BY total;
 SELECT title, MAX(salary) AS 'max', MIN(salary) as 'min' ,AVG(salary) as 'avg' from person WHERE salary > 0 GROUP BY title ORDER BY 'max';
 SELECT first(firstName) AS name, first(bornDate) as born FROM person GROUP BY title ORDER BY bornDate ASC;
 SELECT last(firstName) AS name, last(bornDate) as born FROM person GROUP BY title ORDER BY bornDate ASC;
+SELECT sum(1) AS 'count', stdDevPop(salary) AS 'stdSalary' , stdDevSamp(salary) AS 'sapSalary' FROM person GROUP BY title ORDER BY bornDate ASC;
 ```
 
 #### IN
