[A]支持为DISTINCT后的字段指定别名
例如:SELECT DISTINCT title AS 'tt',city FROM person;

--- a/doc/语法.md
+++ b/doc/语法.md
@@ -5,6 +5,7 @@
 ```sql
 SELECT field1, field2 AS f2 FROM table;
 SELECT DISTINCT title,city FROM person;
+SELECT DISTINCT title AS 'tt',city FROM person;
 ```
 
 ### ORDER BY
