[A]支持为DISTINCT指定表达式
例如:SELECT DISTINCT salary * 10 AS 'sa' FROM person

--- a/doc/语法.md
+++ b/doc/语法.md
@@ -6,6 +6,7 @@
 SELECT field1, field2 AS f2 FROM table;
 SELECT DISTINCT title,city FROM person;
 SELECT DISTINCT title AS 'tt',city FROM person;
+SELECT DISTINCT salary * 10 AS 'sa' FROM person
 ```
 
 ### ORDER BY
