[A]WHERE子句支持NULL判断
SELECT * FROM person WHERE secondName IS NOT NULL

--- a/doc/语法.md
+++ b/doc/语法.md
@@ -25,6 +25,8 @@ SELECT name, age FROM test ORDER BY age DESC LIMIT 1;
 
 ```sql
 SELECT name, age FROM test ORDER BY age DESC LIMIT 1;
+//NULL判断
+SELECT * FROM person WHERE secondName IS NOT NULL;
 ```
 
 ### GROUP BY
@@ -41,7 +43,7 @@ SELECT last(firstName) AS name, last(bornDate) as born FROM person GROUP BY titl
 SELECT sum(1) AS 'count', stdDevPop(salary) AS 'stdSalary' , stdDevSamp(salary) AS 'sapSalary' FROM person GROUP BY title ORDER BY bornDate ASC;
 ```
 
-#### IN
+### IN
 
 ```sql
 SELECT * FROM person WHERE title IN ('BOSS', 'ENGINEER');
