--- a/doc/语法.md
+++ b/doc/语法.md
@@ -27,6 +27,9 @@ SELECT name, age FROM test ORDER BY age DESC LIMIT 1;
 SELECT name, age FROM test ORDER BY age DESC LIMIT 1;
 //NULL判断
 SELECT * FROM person WHERE secondName IS NOT NULL;
+//TRUE/FALSE
+SELECT * FROM person WHERE advance IS TRUE;
+SELECT * FROM person WHERE advance IS FALSE;
 ```
 
 ### GROUP BY
