[A]支持COUNT字段,字段为NULL或不存在时,不计入count

--- a/doc/语法.md
+++ b/doc/语法.md
@@ -8,6 +8,7 @@ SELECT DISTINCT title,city FROM person;
 SELECT DISTINCT title AS 'tt',city FROM person;
 SELECT DISTINCT salary * 10 AS 'sa' FROM person
 SELECT COUNT(*) as total FROM person;
+SELECT COUNT(field) as total FROM person;
 ```
 
 ### ORDER BY
