[A]between支持字符串筛选

--- a/doc/语法.md
+++ b/doc/语法.md
@@ -9,6 +9,7 @@ SELECT DISTINCT title AS 'tt',city FROM person;
 SELECT DISTINCT salary * 10 AS 'sa' FROM person
 SELECT COUNT(*) as total FROM person;
 SELECT COUNT(field) as total FROM person;
+SELECT * FROM person WHERE secondName BETWEEN 'little' AND 'journ';
 ```
 
 ### ORDER BY
