--- a/doc/语法.md
+++ b/doc/语法.md
@@ -55,7 +55,13 @@ SELECT sum(1) AS 'count', stdDevPop(salary) AS 'stdSalary' , stdDevSamp(salary) 
 SELECT * FROM person WHERE title IN ('BOSS', 'ENGINEER');
 ```
 
+### IFNULL
 
+语法同：[$ifNull](https://docs.mongodb.com/manual/reference/operator/aggregation/ifNull/#exp._S_ifNull)
+
+```sql
+SELECT firstName, salary, bonusRate, salary * (1 + IFNULL(bonusRate/100.0,0)) as 'income' FROM person
+```
 
 ## 表达式
 
