--- a/doc/语法.md
+++ b/doc/语法.md
@@ -106,3 +106,10 @@ dateFromString(dateString, format, timeZone, onError, onNull)
 SELECT * ,dateFromString('2020-12-13', '%Y-%m-%d', '+08') AS registerAt FROM person
 ```
 
+### UCASE与LCASE
+
+将字符串转为大写或小写
+
+```
+SELECT *, UCASE(firstName) as uname, LCASE(firstName) as lname FROM person;
+```
