--- a/doc/语法.md
+++ b/doc/语法.md
@@ -113,3 +113,11 @@ SELECT * ,dateFromString('2020-12-13', '%Y-%m-%d', '+08') AS registerAt FROM per
 ```
 SELECT *, UCASE(firstName) as uname, LCASE(firstName) as lname FROM person;
 ```
+
+### ROUND
+
+四舍五入，同[$round](https://docs.mongodb.com/manual/reference/operator/aggregation/round/)
+
+```
+SELECT firstName, salary, ROUND(salary, 0) as 'income' FROM person;
+```
