支持NOW函数获取系统时间

--- a/doc/语法.md
+++ b/doc/语法.md
@@ -121,3 +121,11 @@ SELECT *, UCASE(firstName) as uname, LCASE(firstName) as lname FROM person;
 ```
 SELECT firstName, salary, ROUND(salary, 0) as 'income' FROM person;
 ```
+
+### NOW
+
+系统时间
+
+```
+SELECT NOW() as registerAt from person
+```
