--- a/doc/语法.md
+++ b/doc/语法.md
@@ -129,3 +129,11 @@ SELECT firstName, salary, ROUND(salary, 0) as 'income' FROM person;
 ```
 SELECT NOW() as registerAt from person
 ```
+
+### ABS
+
+取绝对值，同[$ABS](https://docs.mongodb.com/manual/reference/operator/aggregation/abs/#exp._S_abs)
+
+```
+SELECT ABS(salary) as 'salary' from person
+```
