--- a/doc/语法.md
+++ b/doc/语法.md
@@ -137,3 +137,11 @@ SELECT NOW() as registerAt from person
 ```
 SELECT ABS(salary) as 'salary' from person
 ```
+
+### POWER
+
+求指数，同[$pow](https://docs.mongodb.com/manual/reference/operator/aggregation/pow/#exp._S_pow)
+
+```
+SELECT salary, POWER(salary, 2) as income FROM person;
+```
