--- a/doc/语法.md
+++ b/doc/语法.md
@@ -145,3 +145,11 @@ SELECT ABS(salary) as 'salary' from person
 ```
 SELECT salary, POWER(salary, 2) as income FROM person;
 ```
+
+### SQRT
+
+求平方根，同[$sqrt](https://docs.mongodb.com/manual/reference/operator/aggregation/sqrt/#exp._S_sqrt)
+
+```
+SELECT salary, SQRT(salary) as income FROM person;
+```
