--- a/doc/语法.md
+++ b/doc/语法.md
@@ -153,3 +153,11 @@ SELECT salary, POWER(salary, 2) as income FROM person;
 ```
 SELECT salary, SQRT(salary) as income FROM person;
 ```
+
+### MOD
+
+求余数
+
+```
+SELECT salary, MOD(salary,3) as income FROM person;
+```
