--- a/doc/语法.md
+++ b/doc/语法.md
@@ -161,3 +161,11 @@ SELECT salary, SQRT(salary) as income FROM person;
 ```
 SELECT salary, MOD(salary,3) as income FROM person;
 ```
+
+### LOG
+
+求对数
+
+```
+SELECT salary, LOG(salary,10) as income FROM person;
+```
