--- a/doc/语法.md
+++ b/doc/语法.md
@@ -162,10 +162,11 @@ SELECT salary, SQRT(salary) as income FROM person;
 SELECT salary, MOD(salary,3) as income FROM person;
 ```
 
-### LOG
+### LOG/LN
 
 求对数
 
 ```
 SELECT salary, LOG(salary,10) as income FROM person;
+SELECT salary, LN(salary) as income FROM person;
 ```
