--- a/doc/语法.md
+++ b/doc/语法.md
@@ -170,3 +170,11 @@ SELECT salary, MOD(salary,3) as income FROM person;
 SELECT salary, LOG(salary,10) as income FROM person;
 SELECT salary, LN(salary) as income FROM person;
 ```
+
+### TRUNC
+
+取整，同[$trunc]([$trunc (aggregation) — MongoDB Manual](https://docs.mongodb.com/manual/reference/operator/aggregation/trunc/#exp._S_trunc))
+
+```
+SELECT salary, TRUNC(salary) as income FROM person;
+```
