--- a/doc/语法.md
+++ b/doc/语法.md
@@ -178,3 +178,11 @@ SELECT salary, LN(salary) as income FROM person;
 ```
 SELECT salary, TRUNC(salary) as income FROM person;
 ```
+
+### FLOOR
+
+去小于或等于指定数的最大整数，同[$floor]([$floor (aggregation) — MongoDB Manual](https://docs.mongodb.com/manual/reference/operator/aggregation/floor/#exp._S_floor))
+
+```
+SELECT salary, FLOOR(salary) as income FROM person;
+```
