--- a/doc/语法.md
+++ b/doc/语法.md
@@ -57,7 +57,7 @@ SELECT * FROM person WHERE title IN ('BOSS', 'ENGINEER');
 
 ### IFNULL
 
-语法同：[$ifNull](https://docs.mongodb.com/manual/reference/operator/aggregation/ifNull/#exp._S_ifNull)
+参考：[$ifNull](https://docs.mongodb.com/manual/reference/operator/aggregation/ifNull/#exp._S_ifNull)
 
 ```sql
 SELECT firstName, salary, bonusRate, salary * (1 + IFNULL(bonusRate/100.0,0)) as 'income' FROM person
@@ -78,7 +78,7 @@ SELECT * FROM person WHERE salary * (1 + bonusRate/100.0) = 16500
 
 ### dateToString
 
-同 [$dateToString](https://docs.mongodb.com/manual/reference/operator/aggregation/dateToString/#exp._S_dateToString)
+参考 [$dateToString](https://docs.mongodb.com/manual/reference/operator/aggregation/dateToString/#exp._S_dateToString)
 
 ```sql
 dateToString(date, format, timeZone, onNull)
@@ -94,7 +94,7 @@ SELECT *,dateToString(date, '%Y', '+08', '1999') AS year FROM test;
 
 ### dateFromString
 
-同[$dateFromString](https://docs.mongodb.com/manual/reference/operator/aggregation/dateFromString/)
+参考[$dateFromString](https://docs.mongodb.com/manual/reference/operator/aggregation/dateFromString/)
 
 ```sql
 dateFromString(dateString, format, timeZone, onError, onNull)
@@ -116,7 +116,7 @@ SELECT *, UCASE(firstName) as uname, LCASE(firstName) as lname FROM person;
 
 ### ROUND
 
-四舍五入，同[$round](https://docs.mongodb.com/manual/reference/operator/aggregation/round/)
+四舍五入，参考[$round](https://docs.mongodb.com/manual/reference/operator/aggregation/round/)
 
 ```
 SELECT firstName, salary, ROUND(salary, 0) as 'income' FROM person;
@@ -132,7 +132,7 @@ SELECT NOW() as registerAt from person
 
 ### ABS
 
-取绝对值，同[$ABS](https://docs.mongodb.com/manual/reference/operator/aggregation/abs/#exp._S_abs)
+取绝对值，参考[$ABS](https://docs.mongodb.com/manual/reference/operator/aggregation/abs/#exp._S_abs)
 
 ```
 SELECT ABS(salary) as 'salary' from person
@@ -140,7 +140,7 @@ SELECT ABS(salary) as 'salary' from person
 
 ### POWER
 
-求指数，同[$pow](https://docs.mongodb.com/manual/reference/operator/aggregation/pow/#exp._S_pow)
+求指数，参考[$pow](https://docs.mongodb.com/manual/reference/operator/aggregation/pow/#exp._S_pow)
 
 ```
 SELECT salary, POWER(salary, 2) as income FROM person;
@@ -148,7 +148,7 @@ SELECT salary, POWER(salary, 2) as income FROM person;
 
 ### SQRT
 
-求平方根，同[$sqrt](https://docs.mongodb.com/manual/reference/operator/aggregation/sqrt/#exp._S_sqrt)
+求平方根，参考[$sqrt](https://docs.mongodb.com/manual/reference/operator/aggregation/sqrt/#exp._S_sqrt)
 
 ```
 SELECT salary, SQRT(salary) as income FROM person;
@@ -181,8 +181,16 @@ SELECT salary, TRUNC(salary) as income FROM person;
 
 ### FLOOR
 
-去小于或等于指定数的最大整数，同[$floor]([$floor (aggregation) — MongoDB Manual](https://docs.mongodb.com/manual/reference/operator/aggregation/floor/#exp._S_floor))
+取小于或等于指定数的最大整数，参考[$floor]([$floor (aggregation) — MongoDB Manual](https://docs.mongodb.com/manual/reference/operator/aggregation/floor/#exp._S_floor))
 
 ```
 SELECT salary, FLOOR(salary) as income FROM person;
+```
+
+### CEIL
+
+取大于等于指定数的最小整数，参考[$ceil](https://docs.mongodb.com/manual/reference/operator/aggregation/ceil/#exp._S_ceil)
+
+```
+SELECT salary, CEIL(salary) as income FROM person;
 ```
