[A]支持cos、cosh、sinh函数

--- a/doc/语法.md
+++ b/doc/语法.md
@@ -194,3 +194,12 @@ SELECT salary, FLOOR(salary) as income FROM person;
 ```
 SELECT salary, CEIL(salary) as income FROM person;
 ```
+
+### SIN/COS
+
+三角函数计算
+
+```
+SELECT salary, SIN(salary) as income FROM person;
+SELECT salary, COS(salary) as income FROM person;
+```
