--- a/doc/语法.md
+++ b/doc/语法.md
@@ -203,3 +203,11 @@ SELECT salary, CEIL(salary) as income FROM person;
 SELECT salary, SIN(salary) as income FROM person;
 SELECT salary, COS(salary) as income FROM person;
 ```
+
+### ToBool
+
+将表达式转为bool值，参考[$toBool](https://docs.mongodb.com/manual/reference/operator/aggregation/toBool/#mongodb-expression-exp.-toBool)
+
+```
+SELECT salary, TOBOOL(salary) as advance FROM person;
+```
