--- a/doc/语法.md
+++ b/doc/语法.md
@@ -211,3 +211,11 @@ SELECT salary, COS(salary) as income FROM person;
 ```
 SELECT salary, TOBOOL(salary) as advance FROM person;
 ```
+
+### ArrayElemAt
+
+返回数组中的第n个元素，参考[$arrayElemAt](https://docs.mongodb.com/manual/reference/operator/aggregation/arrayElemAt/#mongodb-expression-exp.-arrayElemAt)
+
+```
+SELECT firstName, arrayElemAt(hobby, 1) as most FROM person;
+```
