--- a/doc/语法.md
+++ b/doc/语法.md
@@ -219,3 +219,11 @@ SELECT salary, TOBOOL(salary) as advance FROM person;
 ```
 SELECT firstName, arrayElemAt(hobby, 1) as most FROM person;
 ```
+
+### ToDecimal
+
+返回数组中的第n个元素，参考[$toDecimal](https://docs.mongodb.com/manual/reference/operator/aggregation/toDecimal/#mongodb-expression-exp.-toDecimal)
+
+```
+SELECT firstName, salary, salary * toDecimal('1.10') as income FROM person;
+```
