--- a/doc/语法.md
+++ b/doc/语法.md
@@ -227,3 +227,11 @@ SELECT firstName, arrayElemAt(hobby, 1) as most FROM person;
 ```
 SELECT firstName, salary, salary * toDecimal('1.10') as income FROM person;
 ```
+
+### ToInt
+
+返回数组中的第n个元素，参考[$toInt](https://docs.mongodb.com/manual/reference/operator/aggregation/toInt/#mongodb-expression-exp.-toInt)
+
+```
+SELECT firstName, secondName, toInt(secondName) as age FROM person;
+```
