--- a/doc/语法.md
+++ b/doc/语法.md
@@ -222,7 +222,7 @@ SELECT firstName, arrayElemAt(hobby, 1) as most FROM person;
 
 ### ToDecimal
 
-返回数组中的第n个元素，参考[$toDecimal](https://docs.mongodb.com/manual/reference/operator/aggregation/toDecimal/#mongodb-expression-exp.-toDecimal)
+将表达式转为decimal值，参考[$toDecimal](https://docs.mongodb.com/manual/reference/operator/aggregation/toDecimal/#mongodb-expression-exp.-toDecimal)
 
 ```
 SELECT firstName, salary, salary * toDecimal('1.10') as income FROM person;
@@ -230,8 +230,16 @@ SELECT firstName, salary, salary * toDecimal('1.10') as income FROM person;
 
 ### ToInt
 
-返回数组中的第n个元素，参考[$toInt](https://docs.mongodb.com/manual/reference/operator/aggregation/toInt/#mongodb-expression-exp.-toInt)
+将表达式转为int值，参考[$toInt](https://docs.mongodb.com/manual/reference/operator/aggregation/toInt/#mongodb-expression-exp.-toInt)
 
 ```
 SELECT firstName, secondName, toInt(secondName) as age FROM person;
+```
+
+### ToLong
+
+将表达式转为long值，参考[$toLong]https://docs.mongodb.com/manual/reference/operator/aggregation/toLong/#mongodb-expression-exp.-toLong()
+
+```
+SELECT firstName, secondName, toLong(secondName) as age FROM person;
 ```
